Breaking out components

--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -52,8 +52,18 @@
 
 /* Purpleline Components
 ================================================== */
-@import "purpleline_components/colors", // Knight Lab Colors
-		"purpleline_components/typography"; // Typography
+@import "purpleline_components/colors", 		// Knight Lab Colors
+		"purpleline_components/typography", 	// Typography
+		"purpleline_components/buttons", 		// Buttons
+		"purpleline_components/tables", 		// Tables
+		"purpleline_components/subnav", 		// Sub Nav
+		"purpleline_components/tabs", 			// Tabs
+		"purpleline_components/top-bar", 		// Top Bar
+		"purpleline_components/forms", 			// Forms
+		"purpleline_components/accordion", 		// Accordion
+		"purpleline_components/magellean", 		// Magellean
+		"purpleline_components/thumbnail", 		// Magellean
+		"purpleline_components/footer"; 		// Footer
 
 
 
@@ -61,7 +71,7 @@
 .row {
 	@media screen and (max-width: 1200px) {
 		//override Foundation's default row width of 100% -- it is too wide for small screens
-		width: 95%;
+		// width: 95%;
 	}
 }
 
@@ -77,17 +87,6 @@ hr {
 	border-top: 4px double $smoke;
 }
 
-.well {
-	font-family:$font-family-sans-serif;
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: $vapor;
-    border: 1px solid $smoke;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-}
 
 .editors-note {
 	background-color: $white-smoke;
@@ -109,22 +108,7 @@ hr {
 	-webkit-box-shadow: $default-shadow;
 	-moz-box-shadow: $default-shadow;
 }
-.thumbnail {
-	display: block;
-	padding: 4px;
-	line-height: 22px;
-	border: 1px solid $gainsboro;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-}
+
 
 .polaroid {
 	padding: 4px;
@@ -142,605 +126,4 @@ hr {
 	display: none;
 }
 
-// Knight Lab navigation
-.top-bar {
-	color: $jet;
-	-webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
-	-moz-box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
-	box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
-	background-image: -moz-linear-gradient(top, #fff, #f2f2f2);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#f2f2f2));
-	background-image: -webkit-linear-gradient(top, #fff, #f2f2f2);
-	background-image: -o-linear-gradient(top, #fff, #f2f2f2);
-	background-image: linear-gradient(to bottom, #fff, #f2f2f2);
-	background-repeat: repeat-x;
-	//filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
-	border: 1px solid #d4d4d4;
-	.row {
-		max-width: rem-calc(1200);
-	}
-	.name {
-		margin-top: -1px;
-	} // to adjust for border bottom
-	ul li {
-		padding: 0;
-	}
-}
 
-.sub-nav {
-	clear: both;
-	background: $white-smoke;
-	padding: 10px 0;
-}
-
-.top-bar-section {
-	li {
-		padding: 0;
-		&.logo:hover > a:not(.button):hover {
-			background: transparent;
-			background-image: linear-gradient(to bottom, #fff, #f2f2f2);
-		}
-		&.active:not(.has-form) {
-			a:not(.button) {
-				color: $white;
-				&:hover,
-				&:active,
-				&:focus {
-					color: $smoke;
-				}
-			}
-		}
-		&:not(.has-form) a:not(.button) {
-			background-color: $ghost;
-			background-image: -moz-linear-gradient(top, #fff, #f2f2f2);
-			background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#f2f2f2));
-			background-image: -webkit-linear-gradient(top, #fff, #f2f2f2);
-			background-image: -o-linear-gradient(top, #fff, #f2f2f2);
-			background-image: linear-gradient(to bottom, #fff, #f2f2f2);
-			background-repeat: repeat-x;
-			border-bottom: 1px solid #d4d4d4;
-			height: rem-calc(49); // 1px less than $topbar-height in _settings.scss to adjust for border bottom
-		}
-	}
-}
-
-// Knight Lab footer
-
-/* Footer */
-
-footer,
-#footer {
-	padding: 10px 80px 0;
-	font-size: 14px;
-	background-color: #F3F3F3;
-	border-bottom: 12px solid #520063;
-	font-family: "Apres RE", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-footer {
-	a,
-	a:link,
-	a:visited {
-		color: #666;
-		text-decoration: underline;
-		border: none;
-		display: inline;
-	}
-	.col-940 {
-		display: none;
-	}
-	ul {
-		list-style: none outside none;
-		margin: 0;
-		&.social {
-			text-align: center;
-			padding: 10px 0;
-			/* override for old Bootstrap blueline */
-			margin: 0 auto;
-			float: none;
-			width: 100%;
-			li {
-				float: none;
-				display: inline;
-				font-size: 18px;
-				line-height: 1.4em;
-				padding-bottom: 3px;
-				margin: 0 10px;
-				color: $jet;
-				a:hover {
-					text-decoration: none;
-					opacity: .9;
-				}
-			}
-			a {
-				border: none;
-				text-decoration: none;
-			}
-		}
-		&.logos {
-			margin-top: 25px;
-			border-left: 1px solid #CCCCCC;
-			li {
-				display: block;
-				float: right;
-				&:hover {
-					opacity: .85;
-				}
-				a {
-					background: url("images/footer-logosheet.png") no-repeat scroll center top transparent;
-					display: block;
-					text-indent: -9999px;
-					&.northwestern {
-						background-position: -42px -106px;
-						height: 174px;
-						margin-bottom: 17px;
-						margin-left: 30px;
-						width: 290px;
-					}
-					&.knightfoundation {
-						background-position: 22px -283px;
-						height: 83px;
-						margin-bottom: 23px;
-						margin-top: 14px;
-						width: 383px;
-					}
-					&.medill {
-						background-position: -221px -385px;
-						height: 52px;
-						margin-bottom: 20px;
-						margin-left: 11px;
-						width: 111px;
-					}
-					&.mccormick {
-						background-position: -19px -385px;
-						float: right;
-						height: 52px;
-						margin-bottom: 20px;
-						width: 185px;
-					}
-					&.mccormickfound {
-						background-position: -6px -462px;
-						height: 68px;
-						margin-bottom: 51px;
-						margin-right: 34px;
-						margin-top: 23px;
-						width: 218px;
-					}
-					&.nsf {
-						background-position: right -448px;
-						float: right;
-						height: 84px;
-						margin: 0;
-						width: 131px;
-					}
-				}
-			}
-		}
-	}
-	.contact,
-	.copyright {
-		clear: both;
-		color: #a8a4a3;
-		font-size: 12px;
-		padding-bottom: 20px;
-		padding-top: 70px;
-		text-align: center;
-	}
-	.contact a {
-		color: #a8a4a3;
-		text-decoration: none;
-	}
-	address,
-	address span.address,
-	address span.tel {
-		padding-left: 0;
-		display: inline;
-		width: auto;
-		float: none;
-		font-size: 12px;
-		color: #a8a4a3;
-	}
-}
-
-#knightlab-logo-column {
-	width: 25%;
-	float: left;
-	margin-right: 30px;
-}
-
-#knightlab-description {
-	width: 65%;
-	float: left;
-	border-left: solid 1px #d0d0d0;
-	padding-left: 20px;
-}
-
-#footer-outer {
-	border-top: 4px solid #474748;
-	background-image: linear-gradient(top, rgb(50, 33, 63) 14%, rgb(83, 0, 99) 66%, rgb(83, 0, 99) 44%);
-	background-image: -o-linear-gradient(top, rgb(50, 33, 63) 14%, rgb(83, 0, 99) 66%, rgb(83, 0, 99) 44%);
-	background-image: -moz-linear-gradient(top, rgb(50, 33, 63) 14%, rgb(83, 0, 99) 66%, rgb(83, 0, 99) 44%);
-	background-image: -webkit-linear-gradient(top, rgb(50, 33, 63) 14%, rgb(83, 0, 99) 66%, rgb(83, 0, 99) 44%);
-	background-image: -ms-linear-gradient(top, rgb(50, 33, 63) 14%, rgb(83, 0, 99) 66%, rgb(83, 0, 99) 44%);
-	background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0.14, rgb(50, 33, 63)), color-stop(0.66, rgb(83, 0, 99)), color-stop(0.44, rgb(83, 0, 99)));
-	height: 14px;
-}
-
-.ie9 #footer-outer {
-	background-image: none;
-	background-color: #530063;
-}
-
-.about-knightlab {
-	max-width: 840px;
-	margin: auto;
-	padding-top: 60px;
-	@media (max-width: 767px) {
-		padding-top: 30px;
-	}
-}
-
-@media (max-width: 767px) {
-	footer {
-		padding: 10px 30px;
-	}
-	footer p {
-		font-size: 12px;
-	}
-	#knightlab-logo-column,
-	#knightlab-description {
-		width: 100%;
-		float: none;
-		text-align: center;
-	}
-	#knightlab-logo-column img {
-		max-width: 100px;
-		margin: auto;
-	}
-	#knightlab-description {
-		border-left: 0;
-		text-align: left;
-	}
-	address {
-		display: none;
-	}
-	footer ul.contact-icons {
-		margin: 10px auto;
-	}
-	footer .contact {
-		padding-top: 20px;
-	}
-}
-
-// Blueline overrides components/_sub_nav.scss
-.sub-nav dt,
-.sub-nav dd,
-.sub-nav li {
-	color: $jet;
-	font-size: 0.8125rem;
-}
-
-// Blueline overrides of components/_tabs.scss
-.tabs {
-	li {
-		padding: 0;
-		margin-right: 10px;
-		&.active {
-			border-left: 1px solid $base;
-			border-top: 1px solid $base;
-			border-right: 1px solid $base;
-		}
-	}
-}
-
-.tabs-content {
-	border-top: 1px solid $base;
-	margin-top: -1px;
-}
-
-// Blueline overrides of components/_type.scss
-h1 {
-	font-style: italic;
-	margin: rem-calc(11) 0;
-}
-
-h2.intro {
-	color: $orange;
-	font-family: $font-family-sans-serif;
-}
-
-h1,
-h2,
-h3 {
-	font-family: $primary-header-font-family;
-	line-height: rem-calc(44);
-}
-
-h4,
-h5,
-h6 {
-	font-family: $secondary-header-font-family;
-	font-weight: bold;
-	line-height: rem-calc(22);
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-style: normal;
-	margin: rem-calc(11) 0;
-}
-
-h6 {
-	text-transform: uppercase;
-}
-
-// Blueline overrides of components/_buttons.scss
-button,
-.button {
-	@include button($radius: true);
-	line-height: inherit;
-	//background-color:$smoke;
-	//border-color: transparent;
-	background-color:transparent;
-	border-color: $gainsboro;
-	border-width: 1px;
-	border-style: solid;
-	color:$charcoal;
-	//box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-	box-shadow: none;
-	transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-	//box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-	span {
-		transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-	}
-	&:focus {
-		outline: none;
-	}
-	&:hover,
-	&:active,
-	&:focus {
-
-		//color: #fff;
-		//color:$charcoal;
-		border-color: $gainsboro;
-		//box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2) inset, 0pt -10px 10pt rgba(0, 0, 0, 0.075) inset;
-		box-shadow:0 6px 10px 0 rgba(0, 0, 0, 0.14),
-	                  0 1px 18px 0 rgba(0, 0, 0, 0.12),
-	                  0 3px 5px -1px rgba(0, 0, 0, 0.4);
-		//background-color:$white-smoke;
-		background-color:transparent;
-		span {
-			//color: #fff;
-			//color:$charcoal;
-			text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
-			//text-shadow: none;
-		}
-	}
-	&.success,
-	&.alert,
-	&.info {
-		//text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
-	}
-
-	&.light {
-		@include button($radius: true, $bg: $white, $bg-hover: $ghost, $border-color: $gainsboro);
-		color:$charcoal;
-		&:hover {
-			border-color: $gainsboro;
-		}
-		&.disabled:hover {
-			background-color: $white;
-		}
-	}
-	&.inverse {
-		@include button($radius: true, $bg: $charcoal, $bg-hover: $oil, $border-color: $jumbo);
-		&:hover {
-			border-color: $charcoal;
-		}
-		&.disabled:hover {
-			background-color: $white;
-		}
-	}
-	&.success {
-		@include button($radius: true, $bg: $light-green, $bg-hover: darken( $light-green, 5% ), $border-color: $light-green);
-		text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-		&:hover {
-			border-color: darken( $light-green, 10% );
-			span {
-				text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-			}
-		}
-	}
-	&.warning {
-		
-		@include button($radius: true, $bg: $lighter-orange, $bg-hover: darken( $lighter-orange, 5% ), $border-color: $lighter-orange);
-		color: $dark-orange;
-		span {
-			color: darken( $dark-orange, 10% );
-		}
-		&:hover {
-			border-color: darken( $lighter-orange, 5% );
-		}
-	}
-	&.alert {
-		
-		@include button($radius: true, $bg: $orange, $bg-hover: darken( $orange, 5% ), $border-color: $orange);
-		color: $white;
-		span {
-			color: $white;
-		}
-		&:hover {
-			border-color: darken( $orange, 5% );
-			span {
-				text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-			}
-		}
-	}
-	&.info {
-		
-		@include button($radius: true, $bg: $light-blue, $bg-hover: $blue, $border-color: $light-blue);
-		color: $white;
-		span {
-			color: $white;
-		}
-		&:hover {
-			border-color: $blue;
-			span {
-				text-shadow: -1px 1px 3px rgba(0, 0, 0, 0.6);
-			}
-		}
-	}
-
-	&.disabled,
-	&.disabled:hover {
-		text-shadow: none;
-		box-shadow: none;
-		border-color: transparent !important;
-		span {
-			color: $oil;
-			text-shadow: none;
-		}
-	}
-	&.light, &.inverse, &.success, &.warning, &.disabled, &.alert, &.info {
-		transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-		border-width: 1px;
-		&.postfix.button {
-			border: none;
-			padding-left: 0;
-			padding-right: 0;
-			padding-bottom: 0;
-			padding-top: 0;
-			text-align: center;
-		}
-		//line-height: inherit;
-		&:hover {
-			span {
-				//text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4);
-			}
-		}
-	}
-	&.split {
-		&:hover {
-			//color: #fff;
-			span {
-				border-left-color: $gainsboro;
-				&:after {
-					border-color: $charcoal transparent transparent transparent;
-				}
-			}
-		}
-		span {
-			border-left-color: $gainsboro;
-			transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-			&:after {
-				transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-				border-color: $charcoal transparent transparent transparent;
-			}
-		}
-	}
-	&.dropdown {
-		&:hover {
-			&:after {
-				border-color: $charcoal transparent transparent transparent;
-			}
-		}
-		&:after {
-			border-color: $charcoal transparent transparent transparent;
-		}
-	}
-}
-
-// PurpleLine overrides of components/_tables.scss
-table {
-	font-family: $font-family-sans-serif;
-}
-
-table code {
-	font-family: $font-family-monospace;
-	padding: 0;
-	background: transparent;
-	border: none;
-	color: $orange;
-}
-
-// Blueline overrides of components/_forms.scss
-input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="month"],
-input[type="week"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
-input[type="color"],
-textarea {
-	border-radius: $global-radius;
-}
-
-label,
-.prefix,
-.postfix {
-	font-family: $font-family-sans-serif;
-}
-
-.label {
-	padding: 3px 5px 2px;
-	&.warning {
-		@include label-style($oil);
-	}
-}
-
-.collapse {
-	.postfix.button,
-	.postfix button {
-		border-radius: 0 $global-radius $global-radius 0;
-		box-shadow: 1px 0px 0px rgba(0, 0, 0, 0.2);
-	}
-	.prefix.button,
-	.prefix button {
-		border-radius: 0 $global-radius $global-radius 0;
-		box-shadow: 1px 0px 0px rgba(0, 0, 0, 0.2);
-	}
-}
-
-// Blueline overrides of components/_accordion.scss
-.accordion {
-	@include accordion-navigation ($bg: $white-smoke);
-	li {
-		border: 1px solid $gainsboro;
-		border-radius: $global-radius;
-		margin-top: $global-radius;
-		a:before {
-			content: "\f067 \0000a0\0000a0";
-			font-size: .7em;
-			font-family: FontAwesome;
-			font-weight: normal;
-			font-style: normal;
-			text-decoration: inherit;
-			-webkit-font-smoothing: antialiased;
-			color: #ca4d1d;
-		}
-		&.active a:before {
-			content: "\f068 \0000a0\0000a0";
-		}
-	}
-}
-
-// Blueline overrides of components/_magellean.scss
-[data-magellan-expedition],
-[data-magellan-expedition-clone] {
-	padding: 0;
-}
-
-[data-magellan-expedition] + .row,
-[data-magellan-expedition-clone] + .row {
-	margin-top: 50px;
-}
