--- a/source/scss/purpleline_components/typography.scss
+++ b/source/scss/purpleline_components/typography.scss
@@ -1,7 +1,37 @@
-// Knight Lab typography
-h1.post-title {
+h1, h2, h3 {
+	font-family: $primary-header-font-family;
+	line-height: rem-calc(44);
+}
+
+h4, h5, h6 {
+	font-family: $secondary-header-font-family;
+	font-weight: bold;
+	line-height: rem-calc(22);
+}
+
+h2, h3, h4, h5, h6 {
 	font-style: normal;
-	line-height: 1.1;
+	margin: rem-calc(11) 0;
+}
+
+h6 {
+	text-transform: uppercase;
+}
+
+h1 {
+	font-style: italic;
+	margin: rem-calc(11) 0;
+	&.post-title {
+		font-style: normal;
+		line-height: 1.1;
+	}
+}
+
+h2 {
+	&.intro {
+		color: $orange;
+		font-family: $font-family-sans-serif;
+	}
 }
 
 .logo-mark {
