--- a/source/scss/components/navigation.scss
+++ b/source/scss/components/navigation.scss
@@ -30,7 +30,7 @@ $include-html-dropdown-classes: true;
 $include-html-joyride-classes: true;
 $include-html-off-canvas-classes: true;
 
-@import "settings";
+@import "purpleline-settings";
 
 @import
    "foundation/components/joyride", // page tour
