--- a/source/css/components/image-slider.css
+++ b/source/css/components/image-slider.css
@@ -57,7 +57,7 @@ html {
 
 html,
 body {
-  font-size: 100%; }
+  font-size: 20px; }
 
 body {
   background: #fff;
@@ -66,7 +66,7 @@ body {
   font-family: "Turnip RE", Georgia, "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 150%;
   margin: 0;
   padding: 0;
   position: relative; }
@@ -209,8 +209,8 @@ select {
         position: absolute;
         background-color: rgba(51, 51, 51, 0.8);
         color: #FFFFFF;
-        font-size: 0.875rem;
-        padding: 0.625rem 0.875rem;
+        font-size: 0.7rem;
+        padding: 0.5rem 0.7rem;
         width: 100%; }
   .orbit-container .orbit-slide-number {
     left: 10px;
@@ -222,7 +222,7 @@ select {
     z-index: 10; }
     .orbit-container .orbit-slide-number span {
       font-weight: 700;
-      padding: 0.3125rem; }
+      padding: 0.25rem; }
   .orbit-container .orbit-timer {
     height: 6px;
     position: absolute;
@@ -320,9 +320,9 @@ select {
     cursor: pointer;
     display: inline-block;
     float: none;
-    height: 0.5625rem;
+    height: 0.45rem;
     margin-right: 6px;
-    width: 0.5625rem;
+    width: 0.45rem;
     border-radius: 1000px; }
     .orbit-bullets li.active {
       background: #999999; }
