--- a/source/css/components/inputs.css
+++ b/source/css/components/inputs.css
@@ -57,7 +57,7 @@ html {
 
 html,
 body {
-  font-size: 100%; }
+  font-size: 18px; }
 
 body {
   background: #fff;
@@ -66,7 +66,7 @@ body {
   font-family: "Turnip RE", Georgia, "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 150%;
   margin: 0;
   padding: 0;
   position: relative; }
@@ -127,32 +127,32 @@ select {
 
 .range-slider {
   border: 1px solid #DDDDDD;
-  margin: 1.25rem 0;
+  margin: 1.11111rem 0;
   position: relative;
   -ms-touch-action: none;
   touch-action: none;
   display: block;
-  height: 1rem;
+  height: 0.88889rem;
   width: 100%;
   background: #FAFAFA; }
   .range-slider.vertical-range {
     border: 1px solid #DDDDDD;
-    margin: 1.25rem 0;
+    margin: 1.11111rem 0;
     position: relative;
     -ms-touch-action: none;
     touch-action: none;
     display: inline-block;
-    height: 12.5rem;
-    width: 1rem; }
+    height: 11.11111rem;
+    width: 0.88889rem; }
     .range-slider.vertical-range .range-slider-handle {
-      bottom: -10.5rem;
-      margin-left: -0.5rem;
+      bottom: -9.33333rem;
+      margin-left: -0.44444rem;
       margin-top: 0;
       position: absolute; }
     .range-slider.vertical-range .range-slider-active-segment {
       bottom: 0;
       height: auto;
-      width: 0.875rem; }
+      width: 0.77778rem; }
   .range-slider.radius {
     background: #FAFAFA;
     border-radius: 4px; }
@@ -183,17 +183,17 @@ select {
 .range-slider-active-segment {
   background: #dbdbdb;
   display: inline-block;
-  height: 0.875rem;
+  height: 0.77778rem;
   position: absolute; }
 
 .range-slider-handle {
   border: 1px solid none;
   cursor: pointer;
   display: inline-block;
-  height: 1.375rem;
+  height: 1.22222rem;
   position: absolute;
-  top: -0.3125rem;
-  width: 2rem;
+  top: -0.27778rem;
+  width: 1.77778rem;
   z-index: 1;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
