--- a/source/css/components/navigation.css
+++ b/source/css/components/navigation.css
@@ -57,7 +57,7 @@ html {
 
 html,
 body {
-  font-size: 100%; }
+  font-size: 20px; }
 
 body {
   background: #fff;
@@ -66,7 +66,7 @@ body {
   font-family: "Turnip RE", Georgia, "Times New Roman", Times, serif;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 150%;
   margin: 0;
   padding: 0;
   position: relative; }
@@ -148,7 +148,7 @@ select {
   left: 50%; }
 
 .joyride-content-wrapper {
-  padding: 1.125rem 1.25rem 1.5rem;
+  padding: 0.9rem 1rem 1.2rem;
   width: 100%; }
   .joyride-content-wrapper .button {
     margin-bottom: 0 !important; }
@@ -195,17 +195,17 @@ select {
   margin: 0; }
 
 .joyride-tip-guide p {
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.3;
-  margin: 0 0 1.125rem 0; }
+  margin: 0 0 0.9rem 0; }
 
 .joyride-timer-indicator-wrap {
   border: solid 1px #555555;
-  bottom: 1rem;
+  bottom: 0.8rem;
   height: 3px;
   position: absolute;
   width: 50px;
-  right: 1.0625rem; }
+  right: 0.85rem; }
 
 .joyride-timer-indicator {
   background: #666666;
@@ -284,16 +284,16 @@ select {
   list-style-position: outside;
   list-style-type: none;
   margin: 0;
-  padding: 0.875rem 0; }
+  padding: 0.7rem 0; }
   .side-nav li {
-    font-size: 0.875rem;
+    font-size: 0.7rem;
     font-weight: normal;
-    margin: 0 0 0.4375rem 0; }
+    margin: 0 0 0.35rem 0; }
     .side-nav li a:not(.button) {
       color: #155A8F;
       display: block;
       margin: 0;
-      padding: 0.4375rem 0.875rem; }
+      padding: 0.35rem 0.7rem; }
       .side-nav li a:not(.button):hover, .side-nav li a:not(.button):focus {
         background: rgba(0, 0, 0, 0.025);
         color: #2c92e0; }
@@ -311,7 +311,7 @@ select {
       padding: 0; }
     .side-nav li.heading {
       color: #155A8F;
-      font-size: 0.875rem;
+      font-size: 0.7rem;
       font-weight: bold;
       text-transform: uppercase; }
 
@@ -342,36 +342,36 @@ select {
   -webkit-backface-visibility: hidden;
   background: #333333;
   color: #FFFFFF;
-  height: 2.8125rem;
-  line-height: 2.8125rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
   position: relative; }
   .tab-bar h1, .tab-bar h2, .tab-bar h3, .tab-bar h4, .tab-bar h5, .tab-bar h6 {
     color: #FFFFFF;
     font-weight: bold;
-    line-height: 2.8125rem;
+    line-height: 2.25rem;
     margin: 0; }
   .tab-bar h1, .tab-bar h2, .tab-bar h3, .tab-bar h4 {
     font-size: 1rem; }
 
 .left-small {
-  height: 2.8125rem;
+  height: 2.25rem;
   position: absolute;
   top: 0;
-  width: 2.8125rem;
+  width: 2.25rem;
   border-right: solid 1px #1a1a1a;
   left: 0; }
 
 .right-small {
-  height: 2.8125rem;
+  height: 2.25rem;
   position: absolute;
   top: 0;
-  width: 2.8125rem;
+  width: 2.25rem;
   border-left: solid 1px #1a1a1a;
   right: 0; }
 
 .tab-bar-section {
-  height: 2.8125rem;
-  padding: 0 0.625rem;
+  height: 2.25rem;
+  padding: 0 0.5rem;
   position: absolute;
   text-align: center;
   top: 0; }
@@ -381,33 +381,33 @@ select {
     text-align: right; }
   .tab-bar-section.left {
     left: 0;
-    right: 2.8125rem; }
+    right: 2.25rem; }
   .tab-bar-section.right {
-    left: 2.8125rem;
+    left: 2.25rem;
     right: 0; }
   .tab-bar-section.middle {
-    left: 2.8125rem;
-    right: 2.8125rem; }
+    left: 2.25rem;
+    right: 2.25rem; }
 
 .tab-bar .menu-icon {
   color: #FFFFFF;
   display: block;
-  height: 2.8125rem;
+  height: 2.25rem;
   padding: 0;
   position: relative;
-  text-indent: 2.1875rem;
+  text-indent: 1.75rem;
   transform: translate3d(0, 0, 0);
-  width: 2.8125rem; }
+  width: 2.25rem; }
   .tab-bar .menu-icon span::after {
     content: "";
     display: block;
     height: 0;
     position: absolute;
     top: 50%;
-    margin-top: -0.5rem;
-    left: 0.90625rem;
+    margin-top: -0.4rem;
+    left: 0.725rem;
     box-shadow: 0 0 0 1px #FFFFFF, 0 7px 0 1px #FFFFFF, 0 14px 0 1px #FFFFFF;
-    width: 1rem; }
+    width: 0.8rem; }
   .tab-bar .menu-icon span:hover:after {
     box-shadow: 0 0 0 1px #b3b3b3, 0 7px 0 1px #b3b3b3, 0 14px 0 1px #b3b3b3; }
 
@@ -423,7 +423,7 @@ select {
   position: absolute;
   top: 0;
   transition: transform 500ms ease 0s;
-  width: 15.625rem;
+  width: 12.5rem;
   z-index: 1001;
   -webkit-transform: translate3d(-100%, 0, 0);
   -moz-transform: translate3d(-100%, 0, 0);
@@ -447,7 +447,7 @@ select {
   position: absolute;
   top: 0;
   transition: transform 500ms ease 0s;
-  width: 15.625rem;
+  width: 12.5rem;
   z-index: 1001;
   -webkit-transform: translate3d(100%, 0, 0);
   -moz-transform: translate3d(100%, 0, 0);
@@ -469,10 +469,10 @@ ul.off-canvas-list {
     border-top: 1px solid #5e5e5e;
     color: #999999;
     display: block;
-    font-size: 0.75rem;
+    font-size: 0.6rem;
     font-weight: bold;
     margin: 0;
-    padding: 0.3rem 0.9375rem;
+    padding: 0.3rem 0.75rem;
     text-transform: uppercase; }
   ul.off-canvas-list li a {
     border-bottom: 1px solid #262626;
@@ -486,12 +486,12 @@ ul.off-canvas-list {
       background: #242424; }
 
 .move-right > .inner-wrap {
-  -webkit-transform: translate3d(15.625rem, 0, 0);
-  -moz-transform: translate3d(15.625rem, 0, 0);
-  -ms-transform: translate(15.625rem, 0);
-  -ms-transform: translate3d(15.625rem, 0, 0);
-  -o-transform: translate3d(15.625rem, 0, 0);
-  transform: translate3d(15.625rem, 0, 0); }
+  -webkit-transform: translate3d(12.5rem, 0, 0);
+  -moz-transform: translate3d(12.5rem, 0, 0);
+  -ms-transform: translate(12.5rem, 0);
+  -ms-transform: translate3d(12.5rem, 0, 0);
+  -o-transform: translate3d(12.5rem, 0, 0);
+  transform: translate3d(12.5rem, 0, 0); }
 .move-right .exit-off-canvas {
   -webkit-backface-visibility: hidden;
   box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
@@ -511,12 +511,12 @@ ul.off-canvas-list {
       background: rgba(255, 255, 255, 0.05); } }
 
 .move-left > .inner-wrap {
-  -webkit-transform: translate3d(-15.625rem, 0, 0);
-  -moz-transform: translate3d(-15.625rem, 0, 0);
-  -ms-transform: translate(-15.625rem, 0);
-  -ms-transform: translate3d(-15.625rem, 0, 0);
-  -o-transform: translate3d(-15.625rem, 0, 0);
-  transform: translate3d(-15.625rem, 0, 0); }
+  -webkit-transform: translate3d(-12.5rem, 0, 0);
+  -moz-transform: translate3d(-12.5rem, 0, 0);
+  -ms-transform: translate(-12.5rem, 0);
+  -ms-transform: translate3d(-12.5rem, 0, 0);
+  -o-transform: translate3d(-12.5rem, 0, 0);
+  transform: translate3d(-12.5rem, 0, 0); }
 .move-left .exit-off-canvas {
   -webkit-backface-visibility: hidden;
   box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
@@ -611,13 +611,13 @@ ul.off-canvas-list {
       background: rgba(255, 255, 255, 0.05); } }
 
 .no-csstransforms .left-off-canvas-menu {
-  left: -15.625rem; }
+  left: -12.5rem; }
 .no-csstransforms .right-off-canvas-menu {
-  right: -15.625rem; }
+  right: -12.5rem; }
 .no-csstransforms .move-left > .inner-wrap {
-  right: 15.625rem; }
+  right: 12.5rem; }
 .no-csstransforms .move-right > .inner-wrap {
-  left: 15.625rem; }
+  left: 12.5rem; }
 
 .left-submenu {
   -webkit-backface-visibility: hidden;
@@ -630,7 +630,7 @@ ul.off-canvas-list {
   overflow-y: auto;
   position: absolute;
   top: 0;
-  width: 15.625rem;
+  width: 12.5rem;
   z-index: 1002;
   -webkit-transform: translate3d(-100%, 0, 0);
   -moz-transform: translate3d(-100%, 0, 0);
@@ -652,7 +652,7 @@ ul.off-canvas-list {
     border-top: 1px solid #5e5e5e;
     color: #999999;
     font-weight: bold;
-    padding: 0.3rem 0.9375rem;
+    padding: 0.3rem 0.75rem;
     text-transform: uppercase;
     margin: 0; }
     .left-submenu .back > a:hover {
@@ -682,7 +682,7 @@ ul.off-canvas-list {
   overflow-y: auto;
   position: absolute;
   top: 0;
-  width: 15.625rem;
+  width: 12.5rem;
   z-index: 1002;
   -webkit-transform: translate3d(100%, 0, 0);
   -moz-transform: translate3d(100%, 0, 0);
@@ -704,7 +704,7 @@ ul.off-canvas-list {
     border-top: 1px solid #5e5e5e;
     color: #999999;
     font-weight: bold;
-    padding: 0.3rem 0.9375rem;
+    padding: 0.3rem 0.75rem;
     text-transform: uppercase;
     margin: 0; }
     .right-submenu .back > a:hover {
