--- a/source/scss/components/flex-video.scss
+++ b/source/scss/components/flex-video.scss
@@ -5,11 +5,13 @@ $include-html-accordion-classes: false;
 $include-html-alert-classes: false;
 $include-html-block-grid-classes: false;
 $include-html-button-classes: false;
+$include-html-clearing-classes: false;
 $include-html-form-classes: false;
 $include-html-inline-list-classes: false;
 $include-html-keystroke-classes: false;
 $include-html-label-classes: false;
 $include-html-magellan-classes: false;
+$include-html-orbit-classes: false;
 $include-pagination-classes: false;
 $include-html-panel-classes: false;
 $include-html-pricing-classes: false;
@@ -24,13 +26,10 @@ $include-html-nav-classes: false;
 $include-html-dropdown-classes: false;
 $include-html-joyride-classes: false;
 $include-html-off-canvas-classes: false;
-$include-html-media-classes: false;
-$include-html-orbit-classes: false;
 
-// responsive lightboxes
-// requires foundation.clearing.js
-$include-html-clearing-classes: true;
+// Flex (responsive) video
+$include-html-media-classes: true;
 
-@import "settings";
+@import "purpleline-settings";
 
-@import "foundation/components/clearing";
+@import "foundation/components/flex-video";
