--- a/source/scss/components/inputs.scss
+++ b/source/scss/components/inputs.scss
@@ -4,14 +4,14 @@ $include-html-type-classes: false;
 $include-html-accordion-classes: false;
 $include-html-alert-classes: false;
 $include-html-block-grid-classes: false;
-$include-html-button-classes: false;
-$include-html-form-classes: false;
+$include-html-clearing-classes: false;
 $include-html-inline-list-classes: false;
+$include-html-keystroke-classes: false;
 $include-html-label-classes: false;
 $include-html-magellan-classes: false;
 $include-pagination-classes: false;
 $include-html-panel-classes: false;
-$include-html-range-slider-classes: false;
+$include-html-pricing-classes: false;
 $include-html-reveal-classes: false;
 $include-html-table-classes: false;
 $include-html-tabs-classes: false;
@@ -24,14 +24,14 @@ $include-html-joyride-classes: false;
 $include-html-off-canvas-classes: false;
 $include-html-media-classes: false;
 $include-html-orbit-classes: false;
-$include-html-clearing-classes: false;
+$include-html-button-classes: false;
+ 
+// Forms
+$include-html-form-classes: true;
+$include-html-range-slider-classes: true;
 
-// Keystrokes and pricing tables
-$include-html-keystroke-classes: true;
-$include-html-pricing-classes: true;
-
-@import "settings";
+@import "purpleline-settings";
 
 @import
-   "foundation/components/keystrokes", // special highlighting for keyboard shortcuts
-   "foundation/components/pricing-tables"; // price listings
+    "foundation/components/range-slider", // min-max slider controls
+    "foundation/components/switches"; // sliding form controls
