--- a/source/scss/components/lightbox.scss
+++ b/source/scss/components/lightbox.scss
@@ -5,7 +5,6 @@ $include-html-accordion-classes: false;
 $include-html-alert-classes: false;
 $include-html-block-grid-classes: false;
 $include-html-button-classes: false;
-$include-html-clearing-classes: false;
 $include-html-form-classes: false;
 $include-html-inline-list-classes: false;
 $include-html-keystroke-classes: false;
@@ -26,10 +25,12 @@ $include-html-dropdown-classes: false;
 $include-html-joyride-classes: false;
 $include-html-off-canvas-classes: false;
 $include-html-media-classes: false;
+$include-html-orbit-classes: false;
 
-// Orbit image slider
-$include-html-orbit-classes: true;
+// responsive lightboxes
+// requires foundation.clearing.js
+$include-html-clearing-classes: true;
 
-@import "settings";
+@import "purpleline-settings";
 
-@import "foundation/components/orbit";
+@import "foundation/components/clearing";
