--- a/source/scss/components/misc.scss
+++ b/source/scss/components/misc.scss
@@ -5,16 +5,12 @@ $include-html-accordion-classes: false;
 $include-html-alert-classes: false;
 $include-html-block-grid-classes: false;
 $include-html-button-classes: false;
-$include-html-clearing-classes: false;
 $include-html-form-classes: false;
 $include-html-inline-list-classes: false;
-$include-html-keystroke-classes: false;
 $include-html-label-classes: false;
 $include-html-magellan-classes: false;
-$include-html-orbit-classes: false;
 $include-pagination-classes: false;
 $include-html-panel-classes: false;
-$include-html-pricing-classes: false;
 $include-html-range-slider-classes: false;
 $include-html-reveal-classes: false;
 $include-html-table-classes: false;
@@ -26,10 +22,16 @@ $include-html-nav-classes: false;
 $include-html-dropdown-classes: false;
 $include-html-joyride-classes: false;
 $include-html-off-canvas-classes: false;
+$include-html-media-classes: false;
+$include-html-orbit-classes: false;
+$include-html-clearing-classes: false;
 
-// Flex (responsive) video
-$include-html-media-classes: true;
+// Keystrokes and pricing tables
+$include-html-keystroke-classes: true;
+$include-html-pricing-classes: true;
 
-@import "settings";
+@import "purpleline-settings";
 
-@import "foundation/components/flex-video";
+@import
+   "foundation/components/keystrokes", // special highlighting for keyboard shortcuts
+   "foundation/components/pricing-tables"; // price listings
