--- a/source/scss/purpleline.scss
+++ b/source/scss/purpleline.scss
@@ -14,7 +14,7 @@
 
 /* Settings
 ================================================== */
-@import "settings";
+@import "purpleline-settings";
 
 
 /* Foundation
@@ -66,7 +66,7 @@
 		"purpleline_components/footer"; 		// Footer
 
 
-
+ 
 // Knight Lab utilities
 .row {
 	@media screen and (max-width: 1200px) {
