--- a/source/scss/purpleline_components/typography.scss
+++ b/source/scss/purpleline_components/typography.scss
@@ -1,17 +1,32 @@
+
+@import 'typography_components/logo-mark';
+@import 'typography_components/blockquote';
+@import 'typography_components/ul';
+
 h1, h2, h3 {
 	font-family: $primary-header-font-family;
-	line-height: rem-calc(44);
+	font-style:normal;
+	font-weight: bold;
+	line-height: rem-calc(46.5);
 }
 
 h4, h5, h6 {
-	font-family: $secondary-header-font-family;
+	font-family: $font-family-sans-serif;//$primary-header-font-family;//$secondary-header-font-family;
 	font-weight: bold;
-	line-height: rem-calc(22);
+	line-height: rem-calc(31);
 }
+
+
+
 
 h2, h3, h4, h5, h6 {
 	font-style: normal;
-	margin: rem-calc(11) 0;
+	margin-bottom: rem-calc(15.5);
+	margin-top:rem-calc(30);
+}
+
+h2, h3, h4 {
+	margin-top:rem-calc(65);
 }
 
 h6 {
@@ -19,7 +34,7 @@ h6 {
 }
 
 h1 {
-	font-style: italic;
+	font-family:$font-family-serif;
 	margin: rem-calc(11) 0;
 	&.post-title {
 		font-style: normal;
@@ -31,71 +46,18 @@ h2 {
 	&.intro {
 		color: $orange;
 		font-family: $font-family-sans-serif;
+		font-weight: normal;
 	}
 }
 
-.logo-mark {
-	font-size: 60px;
-	white-space: nowrap;
-	line-height: 1em;
-	margin-bottom: 0px;
-	&.xl,
-	&.xxl {
-		font-size: rem-calc(65);
-		margin-top: 5px;
-	}
-	& + h2.intro {
-		margin-top: 0px;
-	}
-	// TODO: Adjust this min-width as needed
-	@media all and (min-width: 767px) {
-		&.xl {
-			font-size: rem-calc(90);
-			margin-top: 35px;
-		}
-		&.xxl {
-			font-size: rem-calc(120);
-			margin-top: 35px;
-		}
-	}
-	&.bg-white span:before {
-		border-color: #0f9bd1 #fff;
-	}
-	span {
-		background: none repeat scroll 0 0 $light-blue;
-		border-radius: 3px 0px 3px 3px;
-		color: #FFFFFF;
-		font-size: 0.5em;
-		line-height: 0.5em;
-		margin: 5px 6px 0;
-		overflow: hidden;
-		padding: 0.35em 0.45em 0.2em;
-		position: relative;
-		vertical-align: text-top;
-		display: inline-block;
-		&:before {
-			border-color: $light-blue #f3f3f3;
-			border-style: solid;
-			border-width: 0 16px 16px 0;
-			content: "";
-			position: absolute;
-			right: 0;
-			top: -1px;
-		}
-	}
-	@media screen and (-webkit-min-device-pixel-ratio: 0) {
-		span {
-			padding: 0.35em .47em .3em .36em;
-		}
-	}
-}
+
 
 p {
 	font-family: inherit;
 	font-size: 1rem;
 	font-weight: normal;
-	line-height: 1.6;
-	margin-bottom: 1.25rem;
+	line-height: 1.7222222222rem;
+	margin-bottom: 1.7222222222rem;
 	text-rendering: optimizeLegibility;
 	&.lead {
 		font-size: 1.4rem;
@@ -113,67 +75,9 @@ a {
 	transition: color 0.3s ease-in-out;
 }
 
-ul {
-	list-style-type: square;
-	&.contact-icons {
-		list-style-type: none;
-		margin-left: 0;
-		margin-bottom: 0;
-		display: table;
-		content: "";
-		clear: both;
-		li {
-			display: inline-block;
-			float: left;
-			padding-top: 7px;
-			min-height: 33px;
-			padding: 8px 12px 0 0px;
-			margin: 0 -1px;
-			&:first-child {
-				padding-left: 12px;
-			}
-			a,
-			a:link,
-			a:visited {
-				color: $charcoal;
-			}
-			a:hover,
-			a:active {
-				color: $light-blue;
-			}
-			i {
-				width: rem-calc(20);
-				text-align: center;
-			}
-		}
-	}
-	li {
-		line-height: 22px;
-		padding: 2px 0 6px;
-	}
-}
 
-blockquote {
-	padding: 1em 1em 0;
-	margin: 0 0 22px;
-	overflow: auto;
-	font-family: $font-family-serif;
-	font-style: italic;
-	background-color: $ghost;
-	p {
-		font-size: rem-calc(19);
-		line-height: rem-calc(30);
-		//font-size: rem-calc(17.5);
-		//line-height: rem-calc(26.5);
-		color: $charcoal;
-		&.source {
-			text-align: right;
-			font-family:$font-family-sans-serif;
-			font-style: normal;
-			font-size: rem-calc(14);
-		}
-	}
-}
+
+
 
 .drop-hed,
 .panel .drop-hed {
@@ -200,19 +104,3 @@ blockquote {
 	color: $jumbo;
 }
 
-@media screen and (min-width: 728px) {
-	*[data-pullquote]:before {
-		border-bottom: medium double $gainsboro;
-		border-top: medium double $gainsboro;
-		color: $orange;
-		content: attr(data-pullquote);
-		float: right;
-		font-family: $font-family-display-serif;
-		font-size: rem-calc(25);
-		font-style: italic;
-		line-height: 1.3;
-		margin: 7px 0 .5em 35px;
-		padding: 22px 1px 20px;
-		width: 34%;
-	}
-}
